# model_agent

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_WATCHLIST.md  CLAUDE.md  DESIGN.md  PAPERS.md  README.md  REPO_STRUCTURE.md  STATUS.md  VISION.md  WORKFLOW-graph.md  WORKFLOW.md  presentation-v4.html  pyproject.toml  pytest.ini
.claude/: settings.json
neuromodels/: __init__.py
process-notes/: README.md
proposals/: README.md  corpus-candidates-200.json  corpus-candidates-200.md  corpus-expansion-2026-06-02.md  corpus-top100-ranking.md  cost-baseline-2026-06-13.md  cost-reduction-2026-06-13.md  design-pass-2026-05-18.md  faithfulness-enforcement-2026-06-02.md  faithfulness-rerun-report-2026-06-03.md  figure-artifact-skill-corrections-2026-06-15.md  figure-digitization-design-2026-06-03.md  figure-faithfulness-postmortem-2026-06-02.md  final-triage-2026-06-02.md  full-pass-workflow-design-2026-06-03.md  normalization-paper-leads-2026-06-09.md  normalization-reproducibility-ranking-2026-06-04.md  per-model-readme-autogen-2026-06-15.md  process-drift-register-2026-06-14.md  process-improvements-2026-05-18.md  reproduction-program-plan-2026-06-02.md  saturation-spec-review-2026-06-04.md  source-acquisition-2026-06-04.md  sq-blocking-gate-and-paper-fix-2026-06-04.md  wave-retros.md
tools/: backfill_cost_readme.py  backfill_readme_instructions.md  build_model_readme.py  build_readme.py  check_figure_coverage.py  dig_bench.py  remediate_figures_instructions.md  repro_cost.py  test_build_readme.py  test_check_figure_coverage.py
tools/hooks/: pre-push  (+1 more)
(+210 files in other folders)
