[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neuromodels"
version = "0.1.0"
description = "Agentic tooling for reproducing neuroscience computational models."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0"]
test = ["pytest>=8"]

[project.scripts]
neuromodels = "neuromodels.cli.main:main"

[tool.setuptools.packages.find]
include = ["neuromodels*"]
